--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0"
+    },
+    "dependencies": {
+        "bootstrap": "^4.6.0",
+        "npm-watch": "^0.7.0",
+        "sass": "^1.32.6"
     }
 }
