--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
-.phpunit.result.cache
-docker-compose.override.yml
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
+/node_modules/classlist-polyfil
+/node_modules/lodash.debounce
+/node_modules/lodash.throttle
