--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Website build to showcase my web dev portfolio and website design",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/Sloggiebear/dev-portfolio#readme",
   "dependencies": {
-    "aos": "^2.3.4"
+    "aos": "^2.3.4",
+    "owl.carousel": "^2.3.4",
+    "webpack": "^5.67.0"
+  },
+  "devDependencies": {
+    "webpack-cli": "^4.9.2"
   }
 }
