--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "portfolio",
   "version": "1.0.0",
   "description": "Website build to showcase my web dev portfolio and website design",
-  "main": "app.js",
+  "main": "index.js",
+  "private": true,
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -18,11 +20,18 @@
   },
   "homepage": "https://github.com/Sloggiebear/dev-portfolio#readme",
   "dependencies": {
+    "@popperjs/core": "^2.11.2",
     "aos": "^2.3.4",
-    "owl.carousel": "^2.3.4",
-    "webpack": "^5.67.0"
+    "bootstrap": "^5.1.3",
+    "lodash": "^4.17.21",
+    "owl.carousel": "^2.3.4"
   },
   "devDependencies": {
+    "css-loader": "^6.6.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.68.0",
     "webpack-cli": "^4.9.2"
   }
 }
